--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -93,40 +93,21 @@ jobs:
           echo "$RELEASE_NOTES" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
 
-      - name: Create GitHub Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create GitHub Release with Assets
+        uses: ncipollo/release-action@v1
         with:
-          tag_name: v${{ steps.get_version.outputs.version }}
-          release_name: Release v${{ steps.get_version.outputs.version }}
+          tag: v${{ steps.get_version.outputs.version }}
+          name: Release v${{ steps.get_version.outputs.version }}
           body: ${{ steps.extract_notes.outputs.notes }}
           draft: false
           prerelease: false
-
-      - name: Upload wheel to release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/newt-${{ steps.get_version.outputs.version }}-py3-none-any.whl
-          asset_name: newt-${{ steps.get_version.outputs.version }}-py3-none-any.whl
-          asset_content_type: application/x-wheel+zip
-
-      - name: Upload source distribution to release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/newt-${{ steps.get_version.outputs.version }}.tar.gz
-          asset_name: newt-${{ steps.get_version.outputs.version }}.tar.gz
-          asset_content_type: application/gzip
+          artifacts: |
+            ./dist/newt-${{ steps.get_version.outputs.version }}-py3-none-any.whl
+            ./dist/newt-${{ steps.get_version.outputs.version }}.tar.gz
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Comment on PR
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         with:
           script: |
             github.rest.issues.createComment({
