--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "typer>=0.20.0",
+    "alembic>=1.8.0",
 ]
+
 [project.scripts]
 newt = "newt.main:app"
